crates/tlang_parser/tests/snapshots/parser_cast__cast_with_addition.snap
---
source: crates/tlang_parser/tests/parser_cast.rs
expression: "parse! (\"let x = 1 + 2 as i64;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 9,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 8,
          kind: Cast(Expr(
            id: 6,
            kind: BinaryOp(BinaryOpExpression(
              op: Add,
              lhs: Expr(
                id: 4,
                kind: Literal(UnsignedInteger(1)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 8,
                  end: 9,
                  start_lc: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 9,
                  ),
                ),
              ),
              rhs: Expr(
                id: 5,
                kind: Literal(UnsignedInteger(2)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 12,
                  end: 13,
                  start_lc: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 0,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          ), Ty(
            id: 7,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "i64",
                  span: Span(
                    start: 17,
                    end: 20,
                    start_lc: LineColumn(
                      line: 0,
                      column: 17,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 20,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 17,
                end: 20,
                start_lc: LineColumn(
                  line: 0,
                  column: 17,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 20,
                ),
              ),
            )),
            parameters: [],
            span: Span(
              start: 0,
              end: 0,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 0,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 20,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 20,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 21,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 21,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 21,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 21,
    ),
  ),
)
